Add project class

--- a/raconteur/Base.lproj/MainMenu.xib
+++ b/raconteur/Base.lproj/MainMenu.xib
@@ -68,6 +68,11 @@
                                     <action selector="newProject:" target="Voe-Tx-rLC" id="XUK-IY-g48"/>
                                 </connections>
                             </menuItem>
+                            <menuItem title="Add file" keyEquivalent="n" id="NiZ-wG-lFW">
+                                <connections>
+                                    <action selector="addFile:" target="Voe-Tx-rLC" id="kH2-Pj-d57"/>
+                                </connections>
+                            </menuItem>
                         </items>
                     </menu>
                 </menuItem>
