--- a/raconteur/Base.lproj/MainMenu.xib
+++ b/raconteur/Base.lproj/MainMenu.xib
@@ -73,6 +73,11 @@
                                     <action selector="addSlide:" target="Voe-Tx-rLC" id="Txb-mQ-EAW"/>
                                 </connections>
                             </menuItem>
+                            <menuItem title="Save" keyEquivalent="s" id="VJM-f3-AiM">
+                                <connections>
+                                    <action selector="saveProject:" target="Voe-Tx-rLC" id="su4-EY-LNP"/>
+                                </connections>
+                            </menuItem>
                         </items>
                     </menu>
                 </menuItem>
