--- a/raconteur/RCSlideEditorView.xib
+++ b/raconteur/RCSlideEditorView.xib
@@ -12,13 +12,13 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView id="c22-O7-iKe">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+            <rect key="frame" x="0.0" y="0.0" width="419" height="38"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="re3-TF-vuL">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="re3-TF-vuL">
+                    <rect key="frame" x="8" y="8" width="403" height="22"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <textFieldCell key="cell" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="Awk-e2-IkH">
+                    <textFieldCell key="cell" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" drawsBackground="YES" id="Awk-e2-IkH">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -34,10 +34,10 @@
                 </textField>
             </subviews>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="re3-TF-vuL" secondAttribute="bottom" id="7Wi-jV-G7p"/>
-                <constraint firstAttribute="trailing" secondItem="re3-TF-vuL" secondAttribute="trailing" id="HbL-IO-Q6L"/>
-                <constraint firstItem="re3-TF-vuL" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="MEx-6V-QyP"/>
-                <constraint firstItem="re3-TF-vuL" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="jXT-rA-lJH"/>
+                <constraint firstItem="re3-TF-vuL" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" constant="8" id="Qak-Ky-HZe"/>
+                <constraint firstAttribute="bottom" secondItem="re3-TF-vuL" secondAttribute="bottom" constant="8" id="SNe-zC-fk1"/>
+                <constraint firstItem="re3-TF-vuL" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="8" id="wEr-yo-AWX"/>
+                <constraint firstAttribute="trailing" secondItem="re3-TF-vuL" secondAttribute="trailing" constant="8" id="yGc-9L-vOD"/>
             </constraints>
         </customView>
         <userDefaultsController representsSharedInstance="YES" id="F5b-H4-9l5"/>
