--- a/raconteur/Base.lproj/MainMenu.xib
+++ b/raconteur/Base.lproj/MainMenu.xib
@@ -112,6 +112,19 @@
                         </items>
                     </menu>
                 </menuItem>
+                <menuItem title="Presentation" id="4rz-CC-211">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <menu key="submenu" title="Presentation" id="kue-xB-WMp">
+                        <items>
+                            <menuItem title="Start" id="OhC-gv-Tet">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="startPresentation:" target="Voe-Tx-rLC" id="5BL-AK-iLf"/>
+                                </connections>
+                            </menuItem>
+                        </items>
+                    </menu>
+                </menuItem>
                 <menuItem title="Help" id="wpr-3q-Mcd">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
