disable slide editor when no slide is selected

--- a/raconteur/RCMainWindow.xib
+++ b/raconteur/RCMainWindow.xib
@@ -103,6 +103,13 @@
                         </view>
                         <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
                         <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <connections>
+                            <binding destination="-2" name="hidden" keyPath="self.slideEditorController.currentSlide" id="hUT-cy-1KX">
+                                <dictionary key="options">
+                                    <string key="NSValueTransformerName">NSIsNil</string>
+                                </dictionary>
+                            </binding>
+                        </connections>
                     </box>
                 </subviews>
                 <constraints>
