--- a/raconteur/RCSlideEditorView.xib
+++ b/raconteur/RCSlideEditorView.xib
@@ -87,7 +87,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
-                                    <binding destination="-2" name="value" keyPath="currentSlide.options.textColor" id="Lw4-jq-lsA"/>
+                                    <binding destination="-2" name="value" keyPath="currentSlide.options.foregroundColor" id="kpf-0M-zIN"/>
                                 </connections>
                             </colorWell>
                             <colorWell fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="F99-Tm-4UO">
